Fixed for catalog page on mobile version

--- a/source/sass/blocks/companion-card.scss
+++ b/source/sass/blocks/companion-card.scss
@@ -1,7 +1,6 @@
 .companion-card {
   display: grid;
   grid-template-columns: 1fr 2fr;
-  // grid-template-rows: auto auto auto 1fr;
   grid-column-gap: 16px;
   grid-template-areas:
     "avatar details"
@@ -330,7 +329,7 @@
   &::before {
     position: absolute;
     content: "";
-    top: 50%;
+    top: 52%;
     left: 50%;
 
     width: 12px;
@@ -345,14 +344,6 @@
       width: 20px;
       height: 20px;
     }
-  }
-
-  &:hover::before {
-    opacity: 1;
-  }
-
-  &:active::before {
-    opacity: 0.1;
   }
 
   &:focus {
@@ -370,14 +361,24 @@
       background-color: $special-red-hover;
     }
 
-    &:hover::before {
-      opacity: 0.3;
+    @media (min-width: 768px) {
+      &:hover::before {
+        opacity: 0.3;
+      }
     }
   }
 
   @media (min-width: 768px) {
     width: 50px;
     height: 50px;
+
+    &:hover::before {
+      opacity: 1;
+    }
+
+    &:active::after {
+      opacity: 0.1;
+    }
   }
 }
 
@@ -536,7 +537,6 @@
   font-family: inherit;
   font-size: 17px;
   font-weight: 700;
-  line-height: 17px;
   text-transform: uppercase;
   color: $blue-button;
 
@@ -564,7 +564,6 @@
     width: auto;
 
     font-size: 20px;
-    line-height: 20px;
   }
 
   &--tablet {
@@ -720,5 +719,13 @@
     width: 62px;
     height: 62px;
     margin: 0;
+  }
+}
+
+.companion-card__label {
+  height: 20px;
+
+  @media (min-width: 768px) {
+    height: auto;
   }
 }
