--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -14,6 +14,10 @@
     background-color: $basic-blue;
   }
 
+  &--catalog {
+    background-color: $special-blue;
+  }
+
   &--fix {
     position: fixed;
     top: 0;
