--- a/source/sass/blocks/nav.scss
+++ b/source/sass/blocks/nav.scss
@@ -3,33 +3,9 @@
   align-items: center;
   justify-content: space-between;
   flex-wrap: wrap;
-  // padding: 27px 25px 0 25px;
-
-  // @media (min-width: 768px) {
-  //   padding: 40px 40px 0 40px;
-  // }
-
-  // @media (min-width: 1440px) {
-  //   padding: 47px 20px;
-  // }
-
-  // @media (max-width: 767px) {
-  //   &--nojs .page-nav__wrapper {
-  //     height: 189px;
-  //   }
-
-  //   &--nojs .page-nav__list {
-  //     transform: translateY(0);
-  //   }
-
-  //   &--nojs .toggle {
-  //     display: none;
-  //   }
-  // }
 
   @media (min-width: 768px) {
     margin: 0 auto;
-    max-width: 1440px;
   }
 }
 
@@ -45,8 +21,6 @@
   will-change: height;
 
   background-color: $basic-white;
-
-  // transition: height 0.3s ease;
 
   @media (min-width: 768px) {
     width: calc(100% + 80px);
