--- a/source/sass/scaffolding.scss
+++ b/source/sass/scaffolding.scss
@@ -16,15 +16,6 @@
   background-color: $page-background;
 }
 
-.container.page__main--container {
-  @media (min-width: 1440px) {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    padding: 0 60px;
-  }
-}
-
 .container {
   max-width: 1440px;
   margin: 0 auto;
